# backend

./: .pre-commit-config.yaml  README.md  pyproject.toml
backend/: settings.py
