[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dhilipsiva <dhilipsiva@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^7.20.0"
ipdb = "^0.13.4"
flake8 = "^3.8.4"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
